<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:paddingStart="40dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:text="@string/scheduling_title"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="40dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:text="@string/scheduling_description"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:text="@string/scheduling_address_label"/>

        <EditText
                android:id="@+id/address"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="14sp"
                android:hint="@string/scheduling_address_hint"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:text="@string/scheduling_arrive_at_label"/>

        <TextView
                android:id="@+id/time"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:gravity="start|center_vertical"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="14sp"
                android:hint="@string/scheduling_arrive_at_hint"/>

    </LinearLayout>

    <Button
            android:id="@+id/search_vehicle_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/scheduling_search_vehicle"
            android:layout_gravity="center"/>

</LinearLayout>