<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/decline_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_red_light"
                android:textColor="@android:color/white"
                android:text="@string/vehicle_decline"
                android:layout_gravity="center"/>

        <Button
                android:id="@+id/accept_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:textColor="@android:color/white"
                android:text="@string/vehicle_accept"
                android:layout_gravity="center"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/buttons">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

            <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"/>

            <TextView
                    android:id="@+id/license_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="14sp"
                    android:text="@string/vehicle_license_plate"/>

            <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/gray"/>

            <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/scheduling_destination_address_label"/>

            <TextView
                    android:id="@+id/pick_up_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="start"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/vehicle_pickup_time"/>

            <TextView
                    android:id="@+id/arrive_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="start"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:text="@string/vehicle_arrives_at"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>