<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:text="@string/substitution_completed"/>


    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/vehicle_blue"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:id="@+id/pick_up_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/vehicle_pickup_time"/>

    <TextView
            android:id="@+id/arrive_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text="@string/vehicle_arrives_at"/>

    <FrameLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

        <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </FrameLayout>


</LinearLayout>